argocd/apps/linkwarden/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linkwarden
  name: linkwarden
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
  selector:
    app: linkwarden
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
