argocd/apps/linkwarden/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkwarden-http-route
  namespace: linkwarden
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - linkwarden.yanello.net
  rules:
  - backendRefs:
    - name: linkwarden
      namespace: linkwarden
      port: 3000
